<resources>
    <string name="app_name">chat_mobile</string>
    <string name="hello_blank_fragment">test</string>
    <string name="token">shared_preferences_auth_token</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="sign_in">Sign In</string>
    <string name="group_title">group title</string>
    <string name="create_group">create group</string>
    <string name="create_your_group">Create your group</string>
    <string name="write_your_message">write your message</string>
    <string name="send">Send</string>
    <string name="submitbutton">submitButton</string>
    <string name="enter_firstname">enter firstName</string>
    <string name="enter_lastname">enter lastname</string>
    <string name="enter_phonenumber">enter phonenumber</string>
</resources>